helm: fix prometheus.metrics not correctly configuring metrics.
The prometheus.metrics field in helm input values takes an array object,
and in the cilium-config ConfigMap creates config such as:

```
metrics: +metric1 +metric2 -metric
```

This is then parsed by a StringSlice flag in pkg/metrics/registry.go.

StringSlice is supposed to be a comma-seperated value, however the
configmap value is a whitespace seperated.

This changes the helm template to do a join creating a comma seperated
array.

Suggested-by: Michi Mutsuzaki <michi@isovalent.com>

Signed-off-by: Tom Hadlaw <tom.hadlaw@isovalent.com>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -206,9 +206,7 @@ data:
   # Metrics that should be enabled or disabled from the default metric
   # list. (+metric_foo to enable metric_foo , -metric_bar to disable
   # metric_bar).
-  metrics: {{- range .Values.prometheus.metrics }}
-    {{ . }}
-  {{- end }}
+  metrics: {{ join "," .Values.prometheus.metrics | quote }}
   {{- end }}
   {{- if .Values.prometheus.controllerGroupMetrics }}
   # A space-separated list of controller groups for which to enable metrics.
