examples: update guestbook example with new image registry
The GCP Kubernetes Engine Samples migrated their image registry
from Google Container Registry to Google Artifact Registry. Hence,
the image gb-frontend from the guestbook example is no longer available.

Therefore, this commit changes the example to use the new registry.

Issue: GoogleCloudPlatform/kubernetes-engine-samples#209
Guestbook PR: GoogleCloudPlatform/kubernetes-engine-samples#194

Signed-off-by: Marco Hofstetter <marco.hofstetter@isovalent.com>

--- a/test/k8s/manifests/guestbook_deployment.yaml
+++ b/test/k8s/manifests/guestbook_deployment.yaml
@@ -68,7 +68,7 @@ spec:
       terminationGracePeriodSeconds: 0
       containers:
       - name: follower
-        image: gcr.io/google_samples/gb-redis-follower:v2
+        image: us-docker.pkg.dev/google-samples/containers/gke/gb-redis-follower:v2
         imagePullPolicy: IfNotPresent
         ports:
         - name: redis-server
@@ -111,7 +111,7 @@ spec:
     spec:
       containers:
       - name: php-redis
-        image: gcr.io/google-samples/gb-frontend:v6
+        image: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend:v5
         resources:
           requests:
             cpu: 100m
