guestbook: update example & test with leader/follower naming
The guestbook in version v5 fails trying to connect to `redis-leader`. The reason
is that the deployment is still named `redis-master`.

Therefore, this commit renames the example & test guestbook deployments
to use the leader/follower naming.

Signed-off-by: Marco Hofstetter <marco.hofstetter@isovalent.com>

--- a/test/k8s/manifests/guestbook_deployment.yaml
+++ b/test/k8s/manifests/guestbook_deployment.yaml
@@ -2,7 +2,7 @@
 kind: ReplicationController
 apiVersion: v1
 metadata:
-  name: redis-master
+  name: redis-leader
   labels:
     app: redis
     role: leader
@@ -32,7 +32,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: redis-master
+  name: redis-leader
   labels:
     app: redis
     role: leader
