--- a/.github/workflows/scale-test-100-gce.yaml
+++ b/.github/workflows/scale-test-100-gce.yaml
@@ -66,7 +66,7 @@ jobs:
 
           # Setup Cilium install options
           CILIUM_INSTALL_DEFAULTS="${{ steps.default_vars.outputs.cilium_install_defaults }} \
-            --wait=false"
+            --helm-set=prometheus.enabled=true --wait=false"
 
           CLUSTER_NAME="${{ env.test_name }}-${{ env.cluster_base_name }}"
 
@@ -112,8 +112,8 @@ jobs:
       - name: Clone ClusterLoader2
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
-          repository: cilium/perf-tests
-          ref: 6f1bf283e22aa4c29d5db2a7b52501b091a0912e # master
+          repository: marseel/perf-tests
+          ref: 946d8636347c2dce8e97e8e2f8232729feea682b # master
           persist-credentials: false
           sparse-checkout: clusterloader2
           path: perf-tests
