--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -128,8 +128,8 @@ image:
   tag: "v1.13.11"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: ""
-  useDigest: false
+  digest: "sha256:3b117c7a6be212e2723813b44b909c757b76943cb0e9fdd0ec2aa4475bfcadb5"
+  useDigest: true
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -1043,8 +1043,8 @@ hubble:
       repository: "quay.io/cilium/hubble-relay"
       tag: "v1.13.11"
        # hubble-relay-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:34ab52e2ee5ddb05fe27537a57942c01cb56838c0a15a67b25f6c279cc091216"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1900,14 +1900,14 @@ operator:
     repository: "quay.io/cilium/operator"
     tag: "v1.13.11"
     # operator-generic-digest
-    genericDigest: ""
+    genericDigest: "sha256:730e2209b8777f1525186c602f77d5f22259ec4f1f6a2e923f4c03809ab7b0b1"
     # operator-azure-digest
-    azureDigest: ""
+    azureDigest: "sha256:df8863a1c4d1d10135a7fa109becc6f38559b10ab6a72a64f31bffe8a28f4170"
     # operator-aws-digest
-    awsDigest: ""
+    awsDigest: "sha256:bbd37f18dddae6477dd164307340e27deb76d90f9d9fa95f21ed0d18c76309f8"
     # operator-alibabacloud-digest
-    alibabacloudDigest: ""
-    useDigest: false
+    alibabacloudDigest: "sha256:9c1646a1c7c79089f1774550f9d28dcf397ff7adb13e890344b7b26967d95b2e"
+    useDigest: true
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -2163,8 +2163,8 @@ preflight:
     repository: "quay.io/cilium/cilium"
     tag: "v1.13.11"
     # cilium-digest
-    digest: ""
-    useDigest: false
+    digest: "sha256:3b117c7a6be212e2723813b44b909c757b76943cb0e9fdd0ec2aa4475bfcadb5"
+    useDigest: true
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2310,8 +2310,8 @@ clustermesh:
       repository: "quay.io/cilium/clustermesh-apiserver"
       tag: "v1.13.11"
       # clustermesh-apiserver-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:a9e9daadd222453428eadbf25e399e7ac98a18ca264a1d3ce28b41d0792ae63f"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     etcd:
