--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -471,9 +471,6 @@ Makefile* @cilium/build
 /pkg/ipcache/ @cilium/ipcache
 /pkg/ipmasq @cilium/sig-agent
 /pkg/k8s/ @cilium/sig-k8s
-/pkg/k8s/watchers/cilium_network_policy.go @cilium/sig-policy
-/pkg/k8s/watchers/cilium_cidr_group.go @cilium/sig-policy
-/pkg/k8s/watchers/cilium_cidr_group_test.go @cilium/sig-policy
 /pkg/k8s/apis/cilium.io/client/crds/v2/ @cilium/sig-k8s
 /pkg/k8s/apis/cilium.io/client/crds/v2/ciliumegressgatewaypolicies.yaml @cilium/egress-gateway
 /pkg/k8s/apis/cilium.io/v2/cegp_types.go @cilium/egress-gateway
@@ -507,6 +504,7 @@ Makefile* @cilium/build
 /pkg/policy @cilium/sig-policy
 /pkg/policy/api/ @cilium/api
 /pkg/policy/groups/aws/ @cilium/sig-policy @cilium/aws
+/pkg/policy/k8s @cilium/sig-policy
 /pkg/pprof @cilium/sig-foundations
 /pkg/promise @cilium/sig-foundations
 /pkg/proxy/ @cilium/proxy
