--- a/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliumbgppeerconfigs.yaml
+++ b/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliumbgppeerconfigs.yaml
@@ -64,8 +64,8 @@ spec:
                   speaker will negotiate with it's peer. \n If not specified, the
                   default families of IPv6/unicast and IPv4/unicast will be created."
                 items:
-                  description: CiliumBGPFamily represents a AFI/SAFI address family
-                    pair.
+                  description: CiliumBGPFamilyWithAdverts represents a AFI/SAFI address
+                    family pair along with reference to BGP Advertisements.
                   properties:
                     advertisements:
                       description: "Advertisements selects group of BGP Advertisement(s)
